vlib/v/parser/tests/multi_argumented_assign_err.vv
fn main() {
	mut a, mut b, mut c := 0,1, 2 
	a, b, c += 1, 2, 4
	println('$a $b $c')
}
